--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -3,26 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/bg_app"
+    android:padding="@dimen/default_margin_16">
+
+    <Button
+        android:id="@+id/btHomeAddFilter"
+        android:layout_width="@dimen/home_add_filter_button_size"
+        android:layout_height="@dimen/home_add_filter_button_size"
+        android:background="@drawable/bg_circle_button"
+        android:includeFontPadding="false"
+        android:text="@string/home_add_filter_button"
+        android:textAlignment="center"
+        android:textSize="@dimen/dimen_large_display_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/vHomeBackground"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/default_margin_16"
+        android:background="@drawable/bg_home"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btHomeAddFilter" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHomeData"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_margin="@dimen/default_margin_16"
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/vHomeBackground"
         tools:listitem="@layout/item_data" />
-
-    <Button
-        android:id="@+id/btHomeRefresh"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="Refresh"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <include layout="@layout/view_loading" />
 
