--- a/android/app/src/main/res/values/dimens_text.xml
+++ b/android/app/src/main/res/values/dimens_text.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="dimen_normal_display_text">14sp</dimen>
+    <dimen name="dimen_large_display_text">24sp</dimen>
 </resources>
