--- a/android/app/src/main/res/drawable/bg_item_bullet.xml
+++ b/android/app/src/main/res/drawable/bg_item_bullet.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/white" />
-
-    <corners android:radius="20dp" />
+    <solid android:color="@color/orange_red" />
 
 </shape>
