--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@id/btHomeAddFilter" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHomeData"
+        android:id="@+id/rvHomeSmsData"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="@dimen/default_margin_16"
