--- a/android/app/src/main/res/layout/item_data.xml
+++ b/android/app/src/main/res/layout/item_data.xml
@@ -4,43 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/selectableItemBackground">
+    android:background="?attr/selectableItemBackground"
+    android:padding="@dimen/default_margin_16"
+    tools:showIn="@layout/fragment_home">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivDataThumbnail"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_min="100dp"
+    <ImageView
+        android:id="@+id/ivSmsBullet"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:src="@drawable/bg_item_bullet"
+        app:layout_constraintBottom_toBottomOf="@id/tvSmsProvider"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:src="@mipmap/ic_launcher" />
+        app:layout_constraintTop_toTopOf="@id/tvSmsProvider" />
 
     <TextView
         style="Widget.Template.TextView.Bold"
-        android:id="@+id/tvDataTitle"
+        android:id="@+id/tvSmsProvider"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ivDataThumbnail"
+        app:layout_constraintStart_toEndOf="@id/ivSmsBullet"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="title" />
+        tools:text="Provider Name" />
 
     <TextView
         style="Widget.Template.TextView"
-        android:id="@+id/tvDataAuthor"
+        android:id="@+id/tvSmsMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/tvDataTitle"
-        app:layout_constraintStart_toStartOf="@id/tvDataTitle"
-        app:layout_constraintTop_toBottomOf="@id/tvDataTitle"
-        app:layout_constraintVertical_bias="0"
-        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />
+        app:layout_constraintEnd_toEndOf="@id/tvSmsProvider"
+        app:layout_constraintStart_toStartOf="@id/tvSmsProvider"
+        app:layout_constraintTop_toBottomOf="@id/tvSmsProvider"
+        tools:text="Your OTP is 123456" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
