--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -7,26 +7,13 @@
     android:background="@drawable/bg_app"
     android:padding="@dimen/default_margin_16">
 
-    <Button
-        android:id="@+id/btHomeAddFilter"
-        android:layout_width="@dimen/home_add_filter_button_size"
-        android:layout_height="@dimen/home_add_filter_button_size"
-        android:background="@drawable/bg_circle_button"
-        android:includeFontPadding="false"
-        android:text="@string/home_add_filter_button"
-        android:textAlignment="center"
-        android:textSize="@dimen/dimen_large_display_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <View
         android:id="@+id/vHomeBackground"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/default_margin_16"
         android:background="@drawable/bg_home"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btHomeAddFilter" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHomeSmsData"
@@ -37,6 +24,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@id/vHomeBackground"
         tools:listitem="@layout/item_data" />
+
+    <android.widget.Button
+        android:id="@+id/btHomeAddFilter"
+        android:layout_width="@dimen/home_add_filter_button_size"
+        android:layout_height="@dimen/home_add_filter_button_size"
+        android:layout_marginEnd="@dimen/default_margin_24"
+        android:layout_marginBottom="@dimen/default_margin_24"
+        android:background="@drawable/bg_circle_button"
+        android:includeFontPadding="false"
+        android:text="@string/home_add_filter_button"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/dimen_large_display_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <include layout="@layout/view_loading" />
 
