--- a/android/app/src/main/res/values/dimens_text.xml
+++ b/android/app/src/main/res/values/dimens_text.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="dimen_normal_display_text">14sp</dimen>
-    <dimen name="dimen_large_display_text">24sp</dimen>
+    <dimen name="dimen_display_text_14">14sp</dimen>
+    <dimen name="dimen_display_text_18">18sp</dimen>
+    <dimen name="dimen_display_text_20">20sp</dimen>
+    <dimen name="dimen_display_text_24">24sp</dimen>
 </resources>
