--- a/android/app/src/main/res/drawable/bg_circle_button.xml
+++ b/android/app/src/main/res/drawable/bg_circle_button.xml
@@ -4,6 +4,6 @@
 
     <solid android:color="@color/purple_violent_violet" />
 
-    <corners android:radius="20dp" />
+    <corners android:radius="@dimen/default_corner_radius" />
 
 </shape>
