--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -10,20 +10,18 @@
     <View
         android:id="@+id/vHomeBackground"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/bg_home"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_home" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvHomeSmsData"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/default_margin_16"
         android:clipToPadding="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@id/vHomeBackground"
-        tools:listitem="@layout/item_data" />
+        tools:listitem="@layout/item_sms" />
+
+    <!--  TODO: Add the empty case placeholder  -->
 
     <android.widget.Button
         android:id="@+id/btHomeAddFilter"
