--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -3,5 +3,7 @@
     <dimen name="default_margin_16">16dp</dimen>
     <dimen name="default_margin_24">24dp</dimen>
 
+    <dimen name="default_corner_radius">20dp</dimen>
+
     <dimen name="home_add_filter_button_size">50dp</dimen>
 </resources>
