--- a/android/app/src/main/res/layout/fragment_login.xml
+++ b/android/app/src/main/res/layout/fragment_login.xml
@@ -42,7 +42,8 @@
         android:layout_marginTop="@dimen/default_margin_24"
         android:hint="@string/login_password"
         app:layout_constraintBottom_toTopOf="@id/btLogin"
-        app:layout_constraintTop_toBottomOf="@id/tilLoginUsername">
+        app:layout_constraintTop_toBottomOf="@id/tilLoginUsername"
+        app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etLoginPassword"
