--- a/android/app/src/main/res/layout/layout_header_navigation_drawer.xml
+++ b/android/app/src/main/res/layout/layout_header_navigation_drawer.xml
@@ -8,10 +8,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_margin="@dimen/dimen_display_text_20"
         android:text="@string/app_name"
-        android:textAppearance="?attr/textAppearanceHeadline6" />
+        android:textColor="@color/white"
+        android:textSize="@dimen/dimen_display_text_24"
+        android:textStyle="bold" />
 
 </LinearLayout>
