--- a/android/app/src/main/res/menu/main_menu.xml
+++ b/android/app/src/main/res/menu/main_menu.xml
@@ -4,8 +4,14 @@
     <group
         android:id="@+id/gFeature"
         android:checkableBehavior="single">
+
         <item
-            android:id="@+id/history"
+            android:id="@+id/homeFragment"
+            android:icon="@drawable/ic_list"
+            android:title="@string/menu_all_filters" />
+
+        <item
+            android:id="@+id/historyFragment"
             android:icon="@drawable/ic_history"
             android:title="@string/menu_history" />
     </group>
@@ -13,12 +19,10 @@
     <group
         android:id="@+id/gSystem"
         android:checkableBehavior="single">
-        <menu>
-            <item
-                android:id="@+id/logout"
-                android:icon="@drawable/ic_logout"
-                android:title="@string/menu_logout" />
-        </menu>
+        <item
+            android:id="@+id/logout"
+            android:icon="@drawable/ic_logout"
+            android:title="@string/menu_logout" />
     </group>
 
 </menu>
