--- a/android/app/src/main/res/layout/fragment_history.xml
+++ b/android/app/src/main/res/layout/fragment_history.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +7,13 @@
     android:padding="@dimen/default_margin_16">
 
     <View
-        android:id="@+id/vHomeBackground"
+        android:id="@+id/vHistoryBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_home" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHomeSmsData"
+        android:id="@+id/rvHistorySmsData"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/default_margin_16"
@@ -22,21 +21,6 @@
         tools:listitem="@layout/item_sms" />
 
     <!--  TODO: Add the empty case placeholder  -->
-
-    <android.widget.Button
-        android:id="@+id/btHomeAddFilter"
-        android:layout_width="@dimen/home_add_filter_button_size"
-        android:layout_height="@dimen/home_add_filter_button_size"
-        android:layout_marginEnd="@dimen/default_margin_24"
-        android:layout_marginBottom="@dimen/default_margin_24"
-        android:background="@drawable/bg_circle_button"
-        android:includeFontPadding="false"
-        android:text="@string/home_add_filter_button"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/dimen_display_text_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <include layout="@layout/view_loading" />
 
