[chore] Update toolbar and navigation modal color

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,8 @@
             android:id="@+id/tbMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+            android:background="@color/colorPrimaryDark"
+            android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fcvMain"
