--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="default_margin_40">40dp</dimen>
 
     <dimen name="default_corner_radius">20dp</dimen>
+    <dimen name="default_card_radius">8dp</dimen>
 
     <dimen name="home_add_filter_button_size">50dp</dimen>
 </resources>
