[feature] Add slack and email icon

--- a/android/app/src/main/res/layout/fragment_filter_manager.xml
+++ b/android/app/src/main/res/layout/fragment_filter_manager.xml
@@ -73,19 +73,16 @@
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
+            <androidx.appcompat.widget.AppCompatImageView
                 style="Widget.Template.TextView.Bold"
                 android:id="@+id/tvFilterForwardIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="@dimen/default_margin_16"
-                android:rotation="90"
-                android:text=">"
-                android:textColor="@color/white"
-                android:textSize="40sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/vFilterSendFromBg" />
+                app:layout_constraintTop_toBottomOf="@id/vFilterSendFromBg"
+                app:srcCompat="@drawable/ic_arrow_down" />
 
             <View
                 android:id="@+id/vFilterForwardToBg"
@@ -93,7 +90,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="@dimen/default_margin_16"
                 android:background="@drawable/bg_filter"
-                app:layout_constraintBottom_toBottomOf="@id/tilFilterForwardToSlack"
+                app:layout_constraintBottom_toBottomOf="@id/tilFilterForwardToEmail"
                 app:layout_constraintTop_toBottomOf="@id/tvFilterForwardIcon" />
 
             <TextView
@@ -112,24 +109,6 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/AppTextInputLayout"
-                android:id="@+id/tilFilterForwardToEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/default_margin_16"
-                android:layout_marginTop="@dimen/default_margin_8"
-                android:layout_marginEnd="@dimen/default_margin_16"
-                android:hint="@string/filter_email"
-                app:layout_constraintTop_toBottomOf="@id/tvFilterForwardTo">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etFilterForwardToEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/AppTextInputLayout"
                 android:id="@+id/tilFilterForwardToSlack"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -137,13 +116,33 @@
                 android:layout_marginTop="@dimen/default_margin_8"
                 android:layout_marginEnd="@dimen/default_margin_16"
                 android:hint="@string/filter_slack_channel"
-                android:paddingBottom="@dimen/default_margin_16"
-                app:layout_constraintTop_toBottomOf="@id/tilFilterForwardToEmail">
+                app:layout_constraintTop_toBottomOf="@id/tvFilterForwardTo">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etFilterForwardToSlack"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_slack" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/AppTextInputLayout"
+                android:id="@+id/tilFilterForwardToEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_margin_16"
+                android:layout_marginTop="@dimen/default_margin_8"
+                android:layout_marginEnd="@dimen/default_margin_16"
+                android:hint="@string/filter_email"
+                android:paddingBottom="@dimen/default_margin_16"
+                app:layout_constraintTop_toBottomOf="@id/tilFilterForwardToSlack">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etFilterForwardToEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:drawableEnd="@drawable/ic_email"
+                    android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <android.widget.Button
