--- a/android/app/src/main/res/layout/fragment_filter_manager.xml
+++ b/android/app/src/main/res/layout/fragment_filter_manager.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_app">
@@ -52,7 +53,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etFilterSendFromProviderName"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:text="GOOGLE" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -122,7 +124,8 @@
                     android:id="@+id/etFilterForwardToSlack"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawableEnd="@drawable/ic_slack" />
+                    android:drawableEnd="@drawable/ic_slack"
+                    tools:text="https://hooks.slack.com/services/..." />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -142,7 +145,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableEnd="@drawable/ic_email"
-                    android:inputType="textEmailAddress" />
+                    android:inputType="textEmailAddress"
+                    tools:text="hoang.l@nimblehq.co" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <android.widget.Button
